--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
     "tailwindcss": "^3.3.3"
   },
