--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.3.0"
+  },
+  "dependencies": {
+    "cors": "^2.8.5"
   }
 }
