--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "server/server.js",
   "engines": {
-    "node": "18.x"
+    "node": "18.x",
+    "npm" : "9.x"
   },
   "scripts": {
-    "start": "node server/server.js --ignore client",
+    "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
